--- a/To-Do-App-Angular/src/app/task-card/task-card.component.css
+++ b/To-Do-App-Angular/src/app/task-card/task-card.component.css
@@ -1,15 +1,146 @@
-.incomplete{
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    box-shadow: -5px 10px 25px rgb(65, 65, 65);
-    z-index: 3;
+.task-card {
+  width: 17em;
+  height: 23em;
+  position: relative;
+  /*left: 5%;
+  top: 5%;
+  border: 2px solid red;*/
 }
 
-.fade-in{
-    
+.flip-card {
+  background-color: transparent;
+  width: 16em;
+  height: 19em;
+  perspective: 1000px;
+  position: absolute;
+  top: 5%;
+  z-index: 2;
 }
 
-.completed{
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  box-shadow: -5px 10px 15px 1px rgb(65, 65, 65);
+  transform-style: preserve-3d;
+  z-index: 2;
+}
 
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  color: black;
+  z-index: 2;
+}
+
+.flip-card-back {
+  background-color: white;
+  color: black;
+  transform: rotateY(180deg);
+  z-index: 2;
+}
+
+.front-content {
+  position: relative;
+  top: 25%;
+  z-index: 2;
+}
+
+.footer {
+  max-height: 6em;
+  z-index: 2;
+}
+
+.card-buttons {
+  position: absolute;
+  width: 50%;
+  top: 98%;
+  left: 25%;
+  z-index: -1;
+}
+
+.complete {
+  text-decoration: line-through;
+}
+
+a i {
+  font-size: 175%;
+  padding: 1% 5%;
+  cursor: pointer;
+}
+
+a i:hover {
+  box-shadow: 0 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+a i:active {
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+}
+
+.red {
+  color: red;
+}
+
+.blue {
+  color: #2980b9;
+}
+
+.green {
+  color: rgb(16, 170, 16);
+}
+
+.card-back-content {
+  margin-top: -2%;
+}
+
+.card-back-content div{
+  margin-bottom: -5%;
+}
+
+.card-back-content h5{
+	font-size: 105%;
+}
+
+.card-back-footer {
+  position: absolute;
+  text-align: center;
+  bottom: 2%;
+}
+
+.slide-down-fade-in {
+  animation: fadeInButtons 0.5s, slideDownButtons 1s;
+}
+
+@keyframes fadeInButtons {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideDownButtons {
+  0% {
+    top: 80%;
+  }
+
+  100% {
+    top: 98%;
+  }
 }
