--- a/To-Do-App-Angular/src/app/access/login/login.component.html
+++ b/To-Do-App-Angular/src/app/access/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="login-form entry-animation">
+  <br> <br>
+
+  <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+
+        <form>
+
+          <h1>Login</h1>
+
+          <div class="form-group mb-4">
+            <label for="username">Username:</label><br>
+            <input type="text" name="username" id="username" class="form-control" [(ngModel)]="username">
+          </div>
+
+          <div class="form-group mb-4">
+            <label for="password">Password:</label><br>
+            <input type="password" name="password" id="pass" class="form-control" [(ngModel)]="password">
+          </div>
+
+          <div [hidden]="!showError">
+            <p class="entry-animation" id="invalid" style="color: red;">{{errorMessage}}</p>
+          </div>
+
+          <button type="button" id="login" class="btn btn-primary" (click)="validateLogin()">Sign In</button><br>
+          or <br> <a id="signup" (click)="switchToRegister.emit()">Create an Account</a>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
