--- a/To-Do-App-Angular/src/app/access/register/register.component.html
+++ b/To-Do-App-Angular/src/app/access/register/register.component.html
@@ -1,1 +1,51 @@
-<p>register works!</p>
+<div class="register-form register-entry-animation">
+
+  <div class="container-fluid">
+    <div class="container">
+
+      <div class="row">
+
+        <form id="sign-up-content">
+
+          <h1>Sign Up</h1> 
+
+          <div class="form-group mb-3">
+            <label for="firstname">First Name:</label><br>
+            <input type="text" name="firstname" placeholder="First Name" id="fname" class="form-control" [(ngModel)]="user.firstName">
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="lastname">Last Name:</label><br>
+            <input type="text" name="lastname" placeholder="Last Name" id="lname" class="form-control" [(ngModel)]="user.lastName">
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="email">Email:</label><br>
+            <input type="email" name="email" placeholder="Email" id="email" class="form-control" [(ngModel)]="user.email">
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="username">Username:</label><br>
+            <input type="text" name="username" placeholder="Username" id="username" class="form-control" [(ngModel)]="user.username">
+          </div>
+
+          <div class="form-group mb-3">
+            <label for="password">Password:</label><br>
+            <input type="password" name="password" placeholder="Password" id="pass" class="form-control" [(ngModel)]="user.password">
+          </div>
+
+          <div [hidden]="!showError">
+            <p class="register-entry-animation" id="invalid" style="color: red;">{{errorMessage}}</p>
+          </div>
+
+          <br>
+          <button type="button" id="sign-up" class="btn btn-primary" (click)="registerUser()"> Sign Up </button><br>
+          or <br> <a id="login-redirect" (click)="switchToLogin.emit()">Login</a>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <br><br><br>
+
+</div>
