--- a/To-Do-App-Angular/src/app/board/retrieve/retrieve.component.html
+++ b/To-Do-App-Angular/src/app/board/retrieve/retrieve.component.html
@@ -1,42 +1,60 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center layer">
 
-    <div class="container" style="margin-top: 3%;">
-        <div *ngFor="let taskSet of layout; let i = index">
+  <div class="container" style="margin-top: 1%;">
+    <div *ngIf="layout.length != 0">
+      <div *ngFor="let taskSet of layout; let i = index">
 
-            <div *ngIf="taskSet.length == 3">
-                <div class="row justify-content-md-center mb-3">
-                    <div class="col col-lg-3 d-flex justify-content-center col-spacing">
-                        <app-task-card [task]="taskSet[0]"></app-task-card>
-                    </div>
-                    <div class="col col-lg-3 d-flex justify-content-center col-spacing">
-                        <app-task-card [task]="taskSet[1]"></app-task-card>
-                    </div>
-                    <div class="col col-lg-3 d-flex justify-content-center col-spacing">
-                        <app-task-card [task]="taskSet[2]"></app-task-card>
-                    </div>
-                </div>
+        <div *ngIf="taskSet.length == 3">
+          <div class="row justify-content-md-center mb-3">
+            <div class="col col-lg-3 d-flex justify-content-center col-spacing">
+              <app-task-card [task]="taskSet[0]" (updateTask)="emitUpdateTask($event)"
+                (deleteTask)="deleteTaskFromDB($event)"></app-task-card>
             </div>
-
-            <div *ngIf="taskSet.length == 2">
-                <div class="row justify-content-md-center mb-3">
-                    <div class="col col-lg-3 d-flex justify-content-center col-spacing">
-                        <app-task-card [task]="taskSet[0]"></app-task-card>
-                    </div>
-                    <div class="col col-lg-3 d-flex justify-content-center col-spacing">
-                        <app-task-card [task]="taskSet[1]"></app-task-card>
-                    </div>
-                </div>
+            <div class="col col-lg-3 d-flex justify-content-center col-spacing">
+              <app-task-card [task]="taskSet[1]" (updateTask)="emitUpdateTask($event)"
+                (deleteTask)="deleteTaskFromDB($event)"></app-task-card>
             </div>
-
-            <div *ngIf="taskSet.length == 1">
-                <div class="row justify-content-md-center mb-3">
-                    <div class="col col-lg-3 d-flex justify-content-center col-spacing">
-                        <app-task-card [task]="taskSet[0]"></app-task-card>
-                    </div>
-                </div>
+            <div class="col col-lg-3 d-flex justify-content-center col-spacing">
+              <app-task-card [task]="taskSet[2]" (updateTask)="emitUpdateTask($event)"
+                (deleteTask)="deleteTaskFromDB($event)"></app-task-card>
             </div>
-
+          </div>
         </div>
+
+        <div *ngIf="taskSet.length == 2">
+          <div class="row justify-content-md-center mb-3">
+            <div class="col col-lg-3 d-flex justify-content-center col-spacing">
+              <app-task-card [task]="taskSet[0]" (updateTask)="emitUpdateTask($event)"
+                (deleteTask)="deleteTaskFromDB($event)"></app-task-card>
+            </div>
+            <div class="col col-lg-3 d-flex justify-content-center col-spacing">
+              <app-task-card [task]="taskSet[1]" (updateTask)="emitUpdateTask($event)"
+                (deleteTask)="deleteTaskFromDB($event)"></app-task-card>
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="taskSet.length == 1">
+          <div class="row justify-content-md-center mb-3">
+            <div class="col col-lg-3 d-flex justify-content-center col-spacing">
+              <app-task-card [task]="taskSet[0]" (updateTask)="emitUpdateTask($event)"
+                (deleteTask)="deleteTaskFromDB($event)"></app-task-card>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
+    <div *ngIf="layout.length == 0">
+
+      <div class="row justify-content-md-center mb-3">
+        <div class="col col-lg-3 d-flex justify-content-center col-spacing">
+          <h6>You currently don't have any task registered with us.</h6>
+          <p><i class="bi bi-columns-gap"></i></p>
+        </div>
+      </div>
+
+    </div>
+  </div>
 
 </div>
