Added different emitter types based on editorType

--- a/To-Do-App-Angular/src/app/board/modal-editor/modal-editor.component.html
+++ b/To-Do-App-Angular/src/app/board/modal-editor/modal-editor.component.html
@@ -25,7 +25,7 @@
 
                     <h4 style="position: relative; right: 35%;">Status:</h4>
                     <select class="form-control" style="width: 100%;" id="status" name="status" [(ngModel)]="task.status">
-                      <option>Not-Started</option>
+                      <option selected>Not-Started</option>
                       <option>In-Progress</option>
                       <option>Done</option>
                       <option>OverDue</option>
