--- a/To-Do-App-Angular/src/styles.css
+++ b/To-Do-App-Angular/src/styles.css
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+.slide-up-fade-in {
+  animation: fadeIn 1.25s, slideUp 1.25s;
+}
+
+.slide-down-fade-out {
+  animation: fadeIn 1.25s, slideUp 1.25s;
+  animation-direction: reverse;
+}
+
+body{
+  overflow: hidden;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    top: 10%;
+  }
+
+  100% {
+    top: 5%;
+  }
+}
