--- a/To-Do-App-Angular/src/app/board/retrieve/retrieve.component.html
+++ b/To-Do-App-Angular/src/app/board/retrieve/retrieve.component.html
@@ -50,7 +50,11 @@
       <div class="row justify-content-md-center mb-3">
         <div class="col col-lg-3 d-flex justify-content-center col-spacing">
           <h6>You currently don't have any task registered with us.</h6>
-          <p><i class="bi bi-columns-gap"></i></p>
+        </div>
+      </div>
+      <div class="row justify-content-md-center">
+        <div class="col col-lg-3 d-flex justify-content-center col-spacing">
+          <p><i class="bi bi-columns-gap" style="position: relative; left: -35%; font-size: 210%;"></i></p>
         </div>
       </div>
 
