--- a/To-Do-App-Angular/src/styles.css
+++ b/To-Do-App-Angular/src/styles.css
@@ -8,8 +8,13 @@
   animation-direction: reverse;
 }
 
-body{
-  overflow: hidden;
+html {
+  overflow:   scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
 }
 
 @keyframes fadeIn {
